-allow FORREST_HOME to be set by another plugin (some plugins need a specific version of Forrest)\n-pass forrest.plugins property value to servlet startup -separated jetty server starting into a separate class (first phae of allowing support of different servlet engines)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@158980 13f79535-47bb-0310-9956-ffa450edef68