@@ -20,28 +20,16 @@ import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.Enumeration;
-import java.util.Hashtable;
-import java.util.List;
 
 import org.apache.forrest.eclipse.ForrestPlugin;
 import org.apache.forrest.eclipse.preference.ForrestPreferences;
 import org.apache.log4j.Logger;
-import org.eclipse.core.runtime.CoreException;
-import org.eclipse.core.runtime.IPath;
+import org.burrokeet.servletEngine.Jetty;
+import org.burrokeet.servletEngine.Server;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
-import org.eclipse.core.runtime.Path;
 import org.eclipse.core.runtime.Status;
-import org.eclipse.debug.core.DebugPlugin;
-import org.eclipse.debug.core.ILaunchConfiguration;
-import org.eclipse.debug.core.ILaunchConfigurationType;
-import org.eclipse.debug.core.ILaunchConfigurationWorkingCopy;
-import org.eclipse.debug.core.ILaunchManager;
 import org.eclipse.jdt.launching.IJavaLaunchConfigurationConstants;
-import org.eclipse.jdt.launching.IRuntimeClasspathEntry;
-import org.eclipse.jdt.launching.JavaRuntime;
 import org.eclipse.webbrowser.WebBrowser;
 import org.eclipse.webbrowser.WebBrowserEditorInput;
 
@@ -59,12 +47,10 @@ public class ForrestRunner extends ForrestJob implements IJavaLaunchConfiguratio
 	
 	private String workingDir;
 
-	private static final int CORE_EXCEPTION = 100;
-
-	private static final int IO_EXCEPTION = 101;
-
 	private static final int BROWSER_ERROR = 200;
-	
+
+	private static final int IO_EXCEPTION = 300;
+
 	/**
 	 * Create a Forrest runner that will run a Jetty server on a given directory
 	 * @param workingDir - the working directory for the command
@@ -98,86 +84,28 @@ public class ForrestRunner extends ForrestJob implements IJavaLaunchConfiguratio
 			
 		monitor.subTask("Starting Server");
 		if(status.isOK()) {
-			ILaunchManager manager = DebugPlugin.getDefault().getLaunchManager();
-			ILaunchConfigurationType type =
-			      manager.getLaunchConfigurationType(ID_JAVA_APPLICATION);
-			ILaunchConfiguration[] configurations;
-			ILaunchConfigurationWorkingCopy workingCopy;
+			ForrestManager forrestManager = ForrestManager.getInstance();
+			String confPath = ForrestManager.FORREST_CORE_WEBAPP + File.separatorChar + "jettyconf.xml";
 			try {
-				configurations = manager.getLaunchConfigurations(type);
-				for (int i = 0; i < configurations.length; i++) {
-			      ILaunchConfiguration configuration = configurations[i];
-			      if (configuration.getName().equals("Start Jetty")) {
-			         configuration.delete();
-			         break;
-			      }
-			   }
-			   workingCopy = type.newInstance(null, "Start Jetty");
-			   workingCopy.setAttribute(ATTR_MAIN_TYPE_NAME,
-	              "org.mortbay.jetty.Server");
-			   // TODO: allow project specific jettyconf.xml
-			   String args = ForrestManager.FORREST_CORE_WEBAPP + File.separatorChar + "jettyconf.xml";
-			   workingCopy.setAttribute(ATTR_PROGRAM_ARGUMENTS, args);
-			   
-			   List classpath = new ArrayList();
-			   
-			   File[] files = ForrestManager.getClasspathFiles();
-			   IPath classpathEntryPath;
-			   IRuntimeClasspathEntry classpathEntry;
-			   for (int i = 0; i < files.length; i++) {
-				   classpathEntryPath = new Path(files[i].getAbsolutePath());
-				   classpathEntry = JavaRuntime.newArchiveRuntimeClasspathEntry(classpathEntryPath);
-				   classpathEntry.setClasspathProperty(IRuntimeClasspathEntry.USER_CLASSES);
-				   classpath.add(classpathEntry.getMemento());
-			   }
-			   
-			   IPath systemLibsPath = new Path(JavaRuntime.JRE_CONTAINER);
-			   IRuntimeClasspathEntry systemLibsEntry =
-			      JavaRuntime.newRuntimeContainerClasspathEntry(systemLibsPath,
-			         IRuntimeClasspathEntry.STANDARD_CLASSES);
-			   classpath.add(systemLibsEntry.getMemento());
-			   
-			   workingCopy.setAttribute(ATTR_CLASSPATH, classpath);
-			   workingCopy.setAttribute(ATTR_DEFAULT_CLASSPATH, false);
-			   
-			   ForrestManager forrestManager = ForrestManager.getInstance();
-			   Hashtable props = forrestManager.getProperties(workingDir);
-			   
-			   String propName;
-			   String propValue;
-			   StringBuffer sbVars = new StringBuffer();
-			   for (Enumeration e = props.keys() ; e.hasMoreElements() ;) {
-		         propName = (String)e.nextElement();
-		         propValue = (String)props.get(propName);
-			   	 sbVars.append("-D");
-			   	 sbVars.append(propName);
-			   	 sbVars.append("=");
-			   	 sbVars.append(propValue);
-			   	 sbVars.append(" ");
-		         if (logger.isInfoEnabled()) {
-					logger.info("Project property  : " + propName + " = " + propValue);
-				 } 
-		       }
-			   
-			   String strEndorsedLibs = "-Djava.endorsed.dirs=\"" + ForrestManager.FORREST_ENDORSED_LIB + "\"";
-			   workingCopy.setAttribute(ATTR_VM_ARGUMENTS,
-			        sbVars.toString() + strEndorsedLibs);
-			   
-			   workingCopy.setAttribute(ATTR_WORKING_DIRECTORY, ForrestManager.FORREST_CORE_WEBAPP);
-			   
-			   ILaunchConfiguration jettyConfig = workingCopy.doSave();
-			   //DebugUITools.launch(configuration, ILaunchManager.RUN_MODE);
-			   ForrestManager.setServerLaunch( jettyConfig.launch(ILaunchManager.RUN_MODE, monitor));
-			} catch (CoreException e) {
-				logger.error("run(IProgressMonitor)", e);
-				return new Status(Status.ERROR, ForrestPlugin.ID, CORE_EXCEPTION, "Unable to start Jetty server", e);
+				Server jetty = new Jetty(confPath, 
+					  			  ForrestManager.FORREST_CORE_WEBAPP, 
+								  ForrestManager.FORREST_ENDORSED_LIB,
+								  forrestManager.getProperties(workingDir),
+								  ForrestManager.getClasspathFiles());
+				status = jetty.start(monitor);
+				if (status.isOK()) {
+					ForrestManager.setServerLaunch(jetty.getLaunch());
+				} else {
+					ForrestManager.setServerLaunch(null);
+				}
 			} catch (IOException e) {
 				logger.error("run(IProgressMonitor)", e);
-				return new Status(Status.ERROR,ForrestPlugin.ID, IO_EXCEPTION, "Unable to start Jetty server", e);
+				status = new Status(Status.ERROR,ForrestPlugin.ID, IO_EXCEPTION, "Unable to start Jetty server", e);
 			}
 		}
 		
-		if ( ! openBrowser(monitor)) {
+		// FIXME: only open the browser once JETTY has fully started
+		if ( status.isOK() & ! openBrowser(monitor)) {
 			status = new Status(Status.WARNING, ForrestPlugin.ID, BROWSER_ERROR, "Unable to open browser", null);
 		}
 		
